# sdk-chat

./: .dev_store_name  .gitignore  .store_name  Dockerfile  app.py  bisect_file.py  deploy_job.sh  failed_packages.json  packages.json  packages.yaml  pyproject.toml  run.sh  sync_state.sh  system_prompt.txt
tools/: README.md  create_dev_store.py  get_package_metadata.py  list_docs.py  query_store.py  search_docs.py  sync_state.sh
