[project]
name = "sdk-chat"
version = "0.1.0"
description = "AI SDK Document Ingestion and Query App"
requires-python = ">=3.10"
dependencies = [
    "gitingest",
    "google-genai",
    "pyyaml>=6.0.3",
]

[project.scripts]
ingest = "app:run_ingest"
ask = "app:run_ask"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py"]
